# ecompc-greenhouse-platform

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  app.py  constant_estm.ipynb  greenhouse_model.ipynb  main.ipynb  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: python-app.yml
GESmodel/: GES_Example.py  SampleWeather.csv  functions.py  parameters.py  simpleModel.py  simpleParameters.py
app/: app.py  requirements.txt
app/learn/: forecast.md  greenhouse.md  mpc.md  sustainability.md
core/: actuator_model.py  actuators.py  api_queries.py  constant_est_lettuce_model.py  controller.py  generator.py  greenhouse_model.py  heater_model.py  lettuce_model.py  openmeteo_query.py  parameters.npy  plot.py  simpleParameters.py  simulate.py  ventilation_model.py
examples/: GES_Example.py  MPC_example.py
examples/data/: SampleWeather.csv
publications/: .gitignore  main.bib  root.tex
publications/IEEE-conference-template-062824/: IEEE-conference-template-062824.tex
reports/: .coveragerc
results/constant_estimation/: all_100.pkl  c_epsilon_100.pkl  c_gr_max_100.pkl  c_k_100.pkl  c_lar_100.pkl  c_yf_100.pkl
