[project]
name = "greenhouse-mpc"
version = "0.1.1"
description = "Greenhouse MPC"
authors = [{ name = "Marek Wadinger", email = "marek.wadinger@stuba.sk" }]
requires-python = ">=3.8"
readme = "README.md"
license = { file = "LICENSE" }

[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--doctest-glob=README.md",
    "--verbose",
    "-ra",
    "-m not datasets and not slow",
    "--color=yes",
    "--cov=.",
    "--cov-report=xml:reports/coverage/coverage.xml",
    "--cov-report=html:reports/coverage/report",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "NUMBER",
    "ELLIPSIS",
    "IGNORE_EXCEPTION_DETAIL",
]
norecursedirs = ["examples", ".*"]

[tool.ruff]
lint.ignore = ["E501"]
lint.select = ["E", "F", "I", "UP"] # https://beta.ruff.rs/docs/rules/

[[tool.mypy.overrides]]
module = [
    "river.*",
    "mmh3.*",
    "numpy.*",
    "sklearn.*",
    "pytest.*",
    "pandas.*",
    "scipy.*",
    "graphviz.*",
    "vaex.*",
    "torch.*",
    "sqlalchemy.*",
    "requests.*",
]
ignore_missing_imports = true

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
