[project]
name = "greenhouse-mpc"
version = "0.1.1"
description = "Greenhouse MPC"
authors = [{ name = "Marek Wadinger", email = "marek.wadinger@stuba.sk" }]
requires-python = ">=3.8"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "casadi>=3.7.0",
    "do-mpc>=5.0.1",
    "dotenv>=0.9.9",
    "numpy>=1.24.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.0.3",
    "plotly>=6.1.2",
    "scipy>=1.10.1",
    "st-theme>=1.2.3",
    "stqdm>=0.0.5",
    "streamlit>=1.40.1",
    "tqdm>=4.67.1",
    "watchdog>=4.0.2",
    "entsoe-py>=0.6.2",
    "orjson>=3.10.15",
    "pvlib>=0.11.0",
    "requests>=2.32.4",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
]

[dependency-groups]
dev = [
    "apscheduler>=3.11.0",
    "commitizen>=3.31.0",
    "ipykernel>=6.29.5",
    "logfire>=3.17.0",
    "mypy>=1.14.1",
    "nbformat>=5.10.4",
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
    "ruff>=0.12.0",
]


[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--doctest-glob=README.md",
    "--verbose",
    "-ra",
    "-m not datasets and not slow",
    "--color=yes",
    "--cov=.",
    "--cov-report=xml:reports/coverage/coverage.xml",
    "--cov-report=html:reports/coverage/report",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "NUMBER",
    "ELLIPSIS",
    "IGNORE_EXCEPTION_DETAIL",
]
norecursedirs = ["examples", ".*"]

[tool.ruff]
lint.ignore = ["E501"]
lint.select = ["E", "F", "I", "UP"] # https://beta.ruff.rs/docs/rules/

[[tool.mypy.overrides]]
module = [
    "river.*",
    "mmh3.*",
    "numpy.*",
    "sklearn.*",
    "pytest.*",
    "pandas.*",
    "scipy.*",
    "graphviz.*",
    "vaex.*",
    "torch.*",
    "sqlalchemy.*",
    "requests.*",
]
ignore_missing_imports = true

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
